--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "16.2.0",
     "react-native": "0.52.1",
     "react-native-elements": "^0.19.0",
-    "react-native-vector-icons": "^4.5.0"
+    "react-native-vector-icons": "^4.5.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
